--- a/dev/htmlTemplate/mainGroupView.html
+++ b/dev/htmlTemplate/mainGroupView.html
@@ -211,7 +211,7 @@
             <div id="groupCardCarousel_1" class="carousel-item active" name="groupCardCarousel_1">
                 <div class="card cardOriginalTem cardGroup d-block" style="width: 18rem;">
                     <a>
-                        <img src="./images/lake.jpg" class="card-img-top" alt="...">
+                        <img :src="groupCardCarousel_1.Group_Pic" class="card-img-top" alt="...">
                         <div class="card-body card-img-overlay
                                         cardImgOverlayWebUse">
                             <h5 class="card-title cardTitleWebUse">揪團</h5>
@@ -242,7 +242,7 @@
                 <div class="card cardOriginalTem cardGroup d-block" style="width:
                                 18rem;">
                     <a>
-                        <img src="./images/lake.jpg" class="card-img-top" alt="...">
+                        <img :src="groupCardCarousel_2.Group_Pic" class="card-img-top" alt="...">
                         <div class="card-body card-img-overlay
                                         cardImgOverlayWebUse">
                             <h5 class="card-title cardTitleWebUse">揪團</h5>
@@ -272,7 +272,7 @@
             <div id="groupCardCarousel_3" class="carousel-item" name="groupCardCarousel_3">
                 <div class="card cardOriginalTem cardGroup d-block" style="width: 18rem;">
                     <a href="">
-                        <img src="./images/lake.jpg" class="card-img-top" alt="...">
+                        <img :src="groupCardCarousel_3.Group_Pic" class="card-img-top" alt="...">
                         <div class="card-body card-img-overlay
                                         cardImgOverlayWebUse">
                             <h5 class="card-title cardTitleWebUse">揪團</h5>
@@ -302,7 +302,7 @@
             <div id="groupCardCarousel_4" class="carousel-item" name="groupCardCarousel_4">
                 <div class="card cardOriginalTem cardGroup d-block" style="width: 18rem;">
                     <a href="">
-                        <img src="./images/lake.jpg" class="card-img-top" alt="...">
+                        <img :src="groupCardCarousel_4.Group_Pic" class="card-img-top" alt="...">
                         <div class="card-body card-img-overlay
                                         cardImgOverlayWebUse">
                             <h5 class="card-title cardTitleWebUse">揪團</h5>
@@ -332,7 +332,7 @@
             <div id="groupCardCarousel_5" class="carousel-item" name="groupCardCarousel_5">
                 <div class="card cardOriginalTem cardGroup d-block" style="width: 18rem;">
                     <a href="">
-                        <img src="./images/lake.jpg" class="card-img-top" alt="...">
+                        <img :src="groupCardCarousel_5.Group_Pic" class="card-img-top" alt="...">
                         <div class="card-body card-img-overlay
                                         cardImgOverlayWebUse">
                             <h5 class="card-title cardTitleWebUse">揪團</h5>
