scrollbar hidden and lightbox fixes

--- a/dev/blogView.html
+++ b/dev/blogView.html
@@ -6,6 +6,22 @@
   .nav-linkblogView::after {
     width: 100% !important;
   }
+   /* scrollbar hidden */
+   html {
+    overflow: -moz-hidden-unscrollable;
+    height: 100%;
+  }
+
+  body::-webkit-scrollbar {
+    display: none;
+  }
+
+  body {
+    -ms-overflow-style: none;
+    height: 100%;
+	width: calc(100vw + 18px);
+	overflow: auto;
+  }
 </style>
 
 <body>
