--- a/dev/htmlTemplate/setupGroup.html
+++ b/dev/htmlTemplate/setupGroup.html
@@ -1,6 +1,6 @@
 <!-- <link rel="stylesheet" href="./setupGroup.css">  -->
 <form class="setupform" action="#" method="get">
-    <div class="startgroupall">
+    <div class="startgroupall" style="margin:auto;">
         <div class="startgroupa">
             <div class="startgtitle">開始揪團</div>
         </div>    
