--- a/dev/blogInside.html
+++ b/dev/blogInside.html
@@ -1,7 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 @@include('./htmlTemplate/head.html')
-
+<style>
+    /* scrollbar hidden */
+    html {
+      overflow: -moz-hidden-unscrollable;
+      height: 100%;
+    }
+  
+    body::-webkit-scrollbar {
+      display: none;
+    }
+  
+    body {
+      -ms-overflow-style: none;
+      height: 100%;
+      width: calc(100vw + 18px);
+      overflow: auto;
+    }
+  </style>
 <body>
     @@include('./htmlTemplate/nav.html') @@include('./htmlTemplate/blogShow.html') @@include('./htmlTemplate/footer.html')
 </body>
