--- a/dev/groupInside.html
+++ b/dev/groupInside.html
@@ -1,7 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 @@include('./htmlTemplate/head.html')
+<style>
+       /* scrollbar hidden */
+  html {
+    overflow: -moz-hidden-unscrollable;
+    height: 100%;
+  }
 
+  body::-webkit-scrollbar {
+    display: none;
+  }
+
+  body {
+    -ms-overflow-style: none;
+    height: 100%;
+	width: calc(100vw + 18px);
+	overflow: auto;
+  }
+</style>
 <body>
     @@include('./htmlTemplate/nav.html') 
     @@include('./htmlTemplate/groupShow.html') 
@@ -14,9 +31,13 @@
     let setupGroup = document.getElementById("setupGroup");
     function openNewGroup(){
         setupGroup.style.display = "block";
+        $("body").css({'overflow':'hidden'});
+        $('body').css('position','fixed');
     };
     function closeNewGroup(){
         setupGroup.style.display = "none";
+        $("body").css({'overflow-y':'visible'});
+        $('body').css('position','initial');
     };
 </script>
 </html>
