--- a/dev/blogInside.html
+++ b/dev/blogInside.html
@@ -1,9 +1,12 @@
+
 <!DOCTYPE html>
 <html lang="en">
 @@include('./htmlTemplate/head.html')
 
 <body>
-    @@include('./htmlTemplate/nav.html') @@include('./htmlTemplate/blogShow.html') @@include('./htmlTemplate/footer.html')
+    @@include('./htmlTemplate/nav.html') 
+    @@include('./htmlTemplate/blogShow.html') 
+    @@include('./htmlTemplate/footer.html')
 </body>
 
 </html>
