--- a/dev/htmlTemplate/mainGroupView.html
+++ b/dev/htmlTemplate/mainGroupView.html
@@ -239,8 +239,7 @@
                 </div>
             </div>
             <div id="groupCardCarousel_2" class="carousel-item" name="groupCardCarousel_2">
-                <div class="card cardOriginalTem cardGroup d-block" style="width:
-                                18rem;">
+                <div class="card cardOriginalTem cardGroup d-block" style="width:18rem;">
                     <a>
                         <img :src="groupCardCarousel_2.Group_Pic" class="card-img-top" alt="...">
                         <div class="card-body card-img-overlay
