--- a/dev/htmlTemplate/mainGroupView.html
+++ b/dev/htmlTemplate/mainGroupView.html
@@ -179,7 +179,7 @@
                             </div>
                             <div>
                                 <div class="cardGroupContent">
-                                    <p>團主：{{groupCard.Mem_Name}}</p>
+                                    <p>團主：{{groupCard.Mem_name}}</p>
                                     <div>
                                         <p>團主評價：
                                             <img src="./images/good.png" alt=""> {{groupCard.hostlike}}
