style login and regist done

--- a/dev/distanceMatrix2.html
+++ b/dev/distanceMatrix2.html
@@ -46,6 +46,7 @@
       integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
       crossorigin="anonymous"
     ></script>
+    <script src="./js/nav.js"></script>
     <style>
       body {
         font-family: "Noto Sans TC", sans-serif;
@@ -410,7 +411,10 @@
           padding: 5px;
         }
         .mainBody .navBg .navSmall .navSmallCenter img {
-          height: 60px;
+          width: 30px;
+          float: right;
+          margin-top: -5px;
+          margin-right: 15px;
         }
         .mainBody .navBg .navSmall .navSmallRight img {
           height: 25px;
@@ -593,6 +597,193 @@
           -webkit-transform 0.13s 0.25s cubic-bezier(0.215, 0.61, 0.355, 1);
       }
       /*# sourceMappingURL=style.css.map */
+      /* login */
+      .loginnamea {
+        background-color: #ffeded;
+        margin: 0 0 -1 0;
+        font-weight: 500;
+      }
+
+      .logincont {
+        background-color: #ededed;
+        text-align: center;
+        font-size: 1.25rem;
+        padding: 5px;
+      }
+
+      .logintitle {
+        color: #bc2654;
+        font-size: 1.5rem;
+        text-align: center;
+      }
+
+      .loginacc .loginpsdw {
+        border-color: white;
+        font-size: 1.25rem;
+        margin-top: 20px;
+      }
+
+      .loginrightbutton {
+        width: 88px;
+        height: 33px;
+        font-size: 1rem;
+        color: #bc2654;
+        background-color: white;
+        border: 1px solid #bc2654;
+        border-radius: 5px;
+        -webkit-transition: 0.5s;
+        transition: 0.5s;
+        margin-left: 25px;
+        cursor: pointer;
+      }
+
+      .loginrightbutton:hover {
+        color: white;
+        background-color: #bc2654;
+      }
+
+      .loginleftbutton {
+        width: 90px;
+        height: 35px;
+        font-size: 1rem;
+        color: white;
+        background-color: #bc2654;
+        border: 1px solid white;
+        border-radius: 5px;
+        -webkit-transition: 0.5s;
+        transition: 0.5s;
+        cursor: pointer;
+      }
+
+      .loginleftbutton:hover {
+        color: #bc2654;
+        background-color: white;
+      }
+
+      .logintwobtn {
+        text-align: center;
+        margin: 20px;
+      }
+
+      .loginall {
+        width: 500px;
+        color: #393939;
+      }
+      .modal-backdrop {
+        z-index: auto !important;
+      }
+
+      @media screen and (max-width: 576px) {
+        .loginall {
+          width: 100%;
+        }
+        .logintwobtn {
+          text-align: center;
+          margin: 10px;
+        }
+      }
+      /*# sourceMappingURL=style.css.map */
+      /* enrollMem */
+      .enrollnamea {
+        background-color: #ffeded;
+        margin: 0 0 -1 0;
+        font-weight: 500;
+      }
+
+      .enrollcont {
+        background-color: #ededed;
+        text-align: center;
+        font-size: 1.25rem;
+        padding: 5px;
+      }
+
+      .enrolltitle {
+        color: #bc2654;
+        font-size: 1.5rem;
+        text-align: center;
+      }
+
+      .textbox .accbox .psdwbox .accconbox {
+        border-color: white;
+        font-size: 1.25rem;
+        margin-top: 20px;
+      }
+
+      .enrollgend {
+        margin-right: 43px;
+      }
+
+      .moreinfo {
+        resize: none;
+        -webkit-box-shadow: 2px 2px 1px white inset;
+        box-shadow: 2px 2px 1px white inset;
+      }
+
+      .enrollphone {
+        margin-top: 21px;
+      }
+
+      .enrollrightbutton {
+        width: 88px;
+        height: 33px;
+        font-size: 1rem;
+        color: #bc2654;
+        background-color: white;
+        border: 1px solid #bc2654;
+        border-radius: 5px;
+        -webkit-transition: 0.5s;
+        transition: 0.5s;
+        margin-left: 25px;
+        cursor: pointer;
+      }
+
+      .enrollrightbutton:hover {
+        color: white;
+        background-color: #bc2654;
+      }
+
+      .enrollleftbutton {
+        width: 90px;
+        height: 35px;
+        font-size: 1rem;
+        color: white;
+        background-color: #bc2654;
+        border: 1px solid white;
+        border-radius: 5px;
+        -webkit-transition: 0.5s;
+        transition: 0.5s;
+        cursor: pointer;
+      }
+
+      .enrollleftbutton:hover {
+        color: #bc2654;
+        background-color: white;
+      }
+
+      .enrolltwobtn {
+        text-align: center;
+        margin: 20px;
+      }
+
+      .enrollall {
+        width: 500px;
+        color: #393939;
+      }
+
+      @media screen and (max-width: 576px) {
+        .enrollall {
+          width: 100%;
+        }
+        .enrolltwobtn {
+          text-align: center;
+          margin: 10px;
+        }
+      }
+      /*# sourceMappingURL=style.css.map */
+      #aLogin,
+      #aRegist {
+        cursor: pointer;
+      }
     </style>
   </head>
 
