修正後臺刪除留言

--- a/dev/backstage/CMS_msgManagement.html
+++ b/dev/backstage/CMS_msgManagement.html
@@ -276,6 +276,7 @@
         if(xhr.status == 200){
             // console.log(xhr.responseText);
             alert("留言刪除成功！");
+            location.href = "CMS_msgManagement.html";
         }else{
             alert(xhr.status);
         }
