--- a/dev/htmlTemplate/mainGroupView.html
+++ b/dev/htmlTemplate/mainGroupView.html
@@ -16,7 +16,7 @@
         <button class="groupFBtn col-3 col-md-2">
             最新刊登 &darr;
         </button>
-        <button class="groupFBtn col-3 col-md-2" @click="sortbyLike()">
+        <button class="groupFBtn col-3 col-md-2" @click="sortbyLike">
             最高評價 &darr;
         </button>
 
