--- a/dev/htmlTemplate/mainGroupView.html
+++ b/dev/htmlTemplate/mainGroupView.html
@@ -13,7 +13,7 @@
     </div>
     <hr />
     <div class="chooseBlock row">
-        <button class="groupFBtn col-3 col-md-2">
+        <button class="groupFBtn col-3 col-md-2" @click="sortbyLatest">
             最新刊登 &darr;
         </button>
         <button class="groupFBtn col-3 col-md-2" @click="sortbyLike">
