--- a/dev/htmlTemplate/mainGroupView.html
+++ b/dev/htmlTemplate/mainGroupView.html
@@ -6,10 +6,12 @@
     </div>
     <!-- search bar -->
     <div class="groupViewSearchBar row">
-        <input type="text" placeholder="來看看有哪些揪團" class="col col-md-5" />
-        <button>
-            <img src="./images/iconSearch.png" />
-        </button>
+        <form action="groupSearch.php">
+            <input type="text" name="search_text" id="search_text" placeholder="來看看有哪些揪團" class="col col-md-5" />
+            <button type="submit" id="groupSearch" class="groupSearch">
+                <img src="./images/iconSearch.png" />
+            </button>
+        </form>
     </div>
     <hr />
     <div class="chooseBlock row">
@@ -51,38 +53,39 @@
                             <p class="fliterBlock_p">團員人數：</p>
                         </td>
                         <td>
-                            <select name="groupView_FliterPpl">
-                                <option value="1" selected>5人以下</option>
-                                <option value="2">6-10人</option>
-                                <option value="3">10-15人</option>
-                                <option value="">15-20人</option>
-                                <option value="">20人以上</option>
+                            <select name="groupView_FliterPpl" method="post" action="groupViewFilter.php">
+                                <option value="1" selected>任意</option>
+                                <option value="2">20人以上</option>
+                                <option value="3">6-10人</option>
+                                <option value="4">10-15人</option>
+                                <option value="5">15-20人</option>
+                                <option value="6">20人以上</option>
                             </select>
                         </td>
                     </tr>
-                    <tr>
+                    <!-- <tr>
                         <td>
-                            <p class="fliterBlock_p">地區:</p>
+                            <p class="fliterBlock_p">集合地點:</p>
                         </td>
                         <td>
-                            <select name="groupView_FliterArea">
-                                <option value="1" selected>北區</option>
-                                <option value="2">中區</option>
-                                <option value="3">南區</option>
-                                <option value="">東區</option>
-                                <option value="">外島</option>
+                            <select name="groupView_FliterArea" method="post" action="groupViewFilter.php">
+                                <option value="6" selected>北區</option>
+                                <option value="7">中區</option>
+                                <option value="8">南區</option>
+                                <option value="9">東區</option>
+                                <option value="10">外島</option>
                             </select>
                         </td>
-                    </tr>
+                    </tr> -->
                     <tr>
                         <td>
                             <p class="fliterBlock_p">性別限制:</p>
                         </td>
                         <td>
-                            <select name="groupView_FliterSex">
-                                <option value="1" selected>限男</option>
-                                <option value="2">限女</option>
-                                <option value="3">不限制</option>
+                            <select name="groupView_FliterSex" method="post" action="groupViewFilter.php">
+                                <option value="7" selected>不限制</option>
+                                <option value="8">限女</option>
+                                <option value="9">限男</option>
                             </select>
                         </td>
                     </tr>
@@ -91,11 +94,12 @@
                             <p class="fliterBlock_p">旅遊天數:</p>
                         </td>
                         <td>
-                            <select name="groupView_FliterDay">
-                                <option value="1" selected>1</option>
-                                <option value="2">1-5</option>
-                                <option value="3">5-10</option>
-                                <option value="4">10以上</option>
+                            <select name="groupView_FliterDay" method="post" action="groupViewFilter.php">
+                                <option value="10" selected>任意</option>
+                                <option value="11">1</option>
+                                <option value="12">1-5</option>
+                                <option value="13">5-10</option>
+                                <option value="14">10以上</option>
                             </select>
                         </td>
                     </tr>
@@ -104,25 +108,26 @@
                             <p class="fliterBlock_p">出發月份:</p>
                         </td>
                         <td>
-                            <select name="groupView_FliterMonth">
-                                <option value="1" selected>一月</option>
-                                <option value="2">二月</option>
-                                <option value="3">三月</option>
-                                <option value="">四月</option>
-                                <option value="">五月</option>
-                                <option value="">六月</option>
-                                <option value="">七月</option>
-                                <option value="">八月</option>
-                                <option value="">九月</option>
-                                <option value="">十月</option>
-                                <option value="">十一月</option>
-                                <option value="">十二月</option>
+                            <select name="groupView_FliterMonth" method="post" action="groupViewFilter.php">
+                                <option value="15" selected>任意</option>
+                                <option value="16">一月</option>
+                                <option value="17">二月</option>
+                                <option value="18">三月</option>
+                                <option value="19">四月</option>
+                                <option value="20">五月</option>
+                                <option value="21">六月</option>
+                                <option value="22">七月</option>
+                                <option value="23">八月</option>
+                                <option value="24">九月</option>
+                                <option value="25">十月</option>
+                                <option value="26">十一月</option>
+                                <option value="27">十二月</option>
                             </select>
                         </td>
                     </tr>
                     <tr>
                         <td colspan="2">
-                            <button class="btn1111">篩選</button>
+                            <button class="btn1111" type="submit">篩選</button>
                         </td>
                     </tr>
                 </table>
