remove heart from hpg

--- a/dev/htmlTemplate/homepageBody.html
+++ b/dev/htmlTemplate/homepageBody.html
@@ -113,14 +113,6 @@
                                 <div class="cardStar">
                                     <p>人氣{{spot.likecount}}</p>
                                 </div>
-                                <div class="cardLike">
-                                    <a >
-                                        <p>+加入行程</p>
-                                    </a>
-                                    <a >
-                                        <img src="./images/heart.png" >
-                                    </a>
-                                </div>
                             </div>
                         </a>
                     </div>
@@ -222,14 +214,9 @@
                         <div class="cardStar">
                             <p>人氣{{spot.likecount}}</p>
                         </div>
-                        <div class="cardLike">
-                            <a >
-                                <p>+加入行程</p>
-                            </a>
-                            <a >
-                                <img src="./images/heart.png" alt="">
-                            </a>
-                        </div>
+                        <!-- <div class="cardLike">
+                           
+                        </div> -->
                     </div>
                 </a>
             </div>
