--- a/dev/htmlTemplate/mainGroupView.html
+++ b/dev/htmlTemplate/mainGroupView.html
@@ -13,11 +13,11 @@
     </div>
     <hr />
     <div class="chooseBlock row">
-        <input type="hidden" id="sort" value="desc">
-        <button class="groupFBtn col-3 col-md-2" onclick="sortCard('Group_NO')">
+
+        <button class="groupFBtn col-3 col-md-2" @click="">
             最新刊登 &darr;
         </button>
-        <button class="groupFBtn col-3 col-md-2" onclick="sortCard('hostlike')">
+        <button class="groupFBtn col-3 col-md-2" @click="sortCardLike">
             最高評價 &darr;
         </button>
 
