--- a/dev/htmlTemplate/mainGroupView.html
+++ b/dev/htmlTemplate/mainGroupView.html
@@ -17,7 +17,7 @@
         <button class="groupFBtn col-3 col-md-2" @click="">
             最新刊登 &darr;
         </button>
-        <button class="groupFBtn col-3 col-md-2" @like-click="sortCardLike">
+        <button class="groupFBtn col-3 col-md-2" @click="sortCardLike">
             最高評價 &darr;
         </button>
 
