--- a/dev/plan.html
+++ b/dev/plan.html
@@ -1504,7 +1504,7 @@
                     <card @click="sendSelectedAttractionToAttractionList2" class="card align-top m-2 p-2 d-inline-block shadow-sm" data-toggle="modal" data-target="#attracModal" style="width: 11rem;height:14rem;cursor:pointer;">
                       <div class="position-relative cardImg overflow-hidden" style="height:11.5rem">
                         <h5 class="position-absolute text-light" style="top:0px;left:0px;">景點</h5>
-                        <img :src='this.label.Picture1' class="d-block h-100 mx-auto"/>
+                        <img :src='this.label.Attrac_PicURL' class="d-block h-100 mx-auto"/>
                         <div class="position-absolute w-100 px-1" style="bottom:0px;background-color:rgba(0,0,0,0.4);">
                           <h6 class=" text-light text-truncate mb-0 mt-1" style="font-size:0.9rem;">{{label.Attrac_Name}}</h6>
                           <p class=" text-light text-truncate mb-1" style="font-size:0.7rem">{{label.Attrac_Region}}</p>
@@ -1555,7 +1555,7 @@
                       </button>
                       <div class="row">
                         <div class="left px-0 overflow-hidden col-4" style="height:100px">
-                          <img :src="this.label2.Picture1" class="d-block h-100 mx-auto">
+                          <img :src="this.label2.Attrac_PicURL" class="d-block h-100 mx-auto">
                         </div>
                         <div class="right col-8 pr-0 pl-1 position-relative">
                           <h6 class="">{{label2.Attrac_Name}}</h6>
@@ -1606,7 +1606,7 @@
                     </div>
                     <div class="modal-body">
                       <div class="w-100 overflow-hidden" style="height:20rem">
-                        <img :src="this.label4.Picture1" class="d-block h-100 mx-auto">
+                        <img :src="this.label4.Attrac_PicURL" class="d-block h-100 mx-auto">
                       </div>
                       <ul class="list-group list-group-flush">
                         <li class="list-group-item px-1" style="font-size:0.9rem">
