--- a/dev/htmlTemplate/mainMember.html
+++ b/dev/htmlTemplate/mainMember.html
@@ -18,7 +18,7 @@
                 <form action="adjustMemberInfo.php" method="post" id="memLeftAdjustForm" name="memLeftAdjustForm" enctype="multipart/form-data">
                     <div class="memLeftHeadAdjust">修改個人資料</div>
                     <div class="memLeftPicAdjust" id="memLeftPicAdjust"></div>
-
+                    <!-- 上傳照片 -->
                     <label class="chooseFile" id="chooseFileLabel">選擇大頭照<input type="file" name="chooseFile" id="chooseFile"></label>    
 
                     <div class="memLeftNameAdjust" id="memLeftNameAdjust"></div>
