--- a/dev/htmlTemplate/mainGroupView.html
+++ b/dev/htmlTemplate/mainGroupView.html
@@ -14,7 +14,7 @@
     <hr />
     <div class="chooseBlock row">
 
-        <button class="groupFBtn col-3 col-md-2" @click="">
+        <button class="groupFBtn col-3 col-md-2" @click="sortCardLatest">
             最新刊登 &darr;
         </button>
         <button class="groupFBtn col-3 col-md-2" @click="sortCardLike">
